sqlserver-deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  labels:
    app: sqlserver
spec:
  type: LoadBalancer
  selector:
    app: sqlserver
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
    name: mssql
